--- a/productLanding.html
+++ b/productLanding.html
@@ -1,1 +1,70 @@
-
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <link rel="stylesheet" href="productStyle.css">
+        <title>Hermes Scooters</title>
+        <meta charset="UTF-8">
+    </head>
+    <body>
+        <header id="header">
+            <nav id="nav-bar">
+                <img id="header-img" src="productLogo.jpeg" alt="Hermes-scooter-logo">
+                <ul>
+                    <li><a class="nav-link" href="#video">Video Demo</a></li>
+                    <li><a class="nav-link" href="#about-us">About Us</a></li>
+                    <li><a class="nav-link" href="#pricing">Pricing</a></li>
+                </ul>
+            </nav>
+            <br>
+            <h1>Hermes Scooters</h1>
+            <h2>Join our mailing list</h2>
+            <form id="form">
+                <label for="email">Join our mailing list</label><br>
+                <input id="email" type="email"  placeholder="JohnDoe@gmail.com" required><br>
+                <input id="submit" type="submit" value="Get Started">
+            </form>
+        </header>
+        <div id="Body Contents">
+            <h2>Fast Scooters</h2>
+            <p>Our rental scooters hit speeds up to <strong>70</strong>mph</p>
+            <h2>Simple rentals and returns</h2>
+            <p>We ship our rentals quickly and make it easy for you to return your scooters </p>
+            <h2>Quality Assurance</h2>
+            <p>Our scooters have regular maitenance and are ensured to be fault and damage free</p>
+        </div>
+        <iframe src="https://www.youtube.com/embed/tuPyVIxkkL4"></iframe>
+        <div id="about-us">
+            <h3>About Us</h3>
+        <p>Hermes Scooters was founded with the goal of making motorized travel accessible for city dwellers.
+            We understand the need to have access to non car vehicles in cities like New York, Chicago and Seattle.
+            It is our mission to create motorized travel equity within urban communities and foster a fair priced alternative
+            to public transportation and personal cars. 
+        </p>
+        </div>
+        <div id="pricing">
+            <h3>Pricing</h3><br>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Package One</th>
+                        <th>Package Two</th>
+                        <th>Package three</th>
+                    </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td> <button type="button">Select Package One</button></td>
+                    <td><button type="button">Select Package Two</button> </td>
+                    <td>  <button type="button">Select Package Three</button></td>
+                </tr>
+            </tbody>
+            </table><br>
+        </div>
+        <footer id="footer">
+            <a class="footer-links" href="terms.html">Terms</a>
+            <a class="footer-links" href="testimonials.html">Testimonials</a>
+            <a class="footer-links" href="Contact.html">Contact Us</a>
+            <p><i>Copyright 2022, Hermes Scooters</i></p>
+        </footer>
+    </body>
+</html>
